# harpo-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/enterprise_stress_test/: README.md  demo_enterprise_stress_test.py
benchmarks/evolution_tracking/: README.md  demo_evolution.py
benchmarks/incident_response/: README.md  demo_multiagent_incident_response.py
benchmarks/incident_response/sample_output/: README.md  run_20260530_collaboration_graph.dot  run_20260530_report.txt  run_20260530_trajectory.json
benchmarks/product_launch_memory/: README.md  demo_product_launch_memory.py
benchmarks/product_launch_memory/sample_output/: README.md  run_20260531_memory_analysis.json
docs/: HARPO_BENCHMARK_PROTOCOL.md  HARPO_CAUSAL_GRAPH_FOUNDATION.md  HARPO_MVP_AND_RESEARCH_VISION.md  HARPO_OPENHIVE_GUIDE.md
scripts/: demo_open_hive.py  harpo_trajectory_analysis.py
src/harpo/: __init__.py
src/harpo/adapters/: __init__.py  base.py
src/harpo/api/: __init__.py  ingestion_routes.py  trajectory_routes.py  websocket_routes.py
src/harpo/core/: __init__.py  events.py  hooks.py  schema.py
src/harpo/evolution/: __init__.py  comparator.py  tracker.py
src/harpo/failures/: __init__.py  detectors.py  interfaces.py  schema.py
src/harpo/forensics/: __init__.py  executive_summary.py  root_cause_engine.py  root_cause_ranking.py
src/harpo/memory/: __init__.py  causal_memory.py  contribution_analysis.py  correction_vs_recovery.py  influence_graph.py  memory_damage_attribution.py  memory_instrumentation.py  memory_lineage_graph.py  memory_propagation_graph.py  memory_recovery_analysis.py  memory_store.py  (+5 more)
tests/fixtures/: sample_trajectory.json
tests/unit/: test_memory_causality.py  test_semantic_analyzer.py  test_trajectory_schema.py
(+38 files in other folders)
